--- a/.gitignore
+++ b/.gitignore
@@ -10,13 +10,17 @@ __pycache__/
 .Python
 build/
 develop-eggs/
+node_modules/
 dist/
 downloads/
 eggs/
 .eggs/
-lib/
 lib64/
 parts/
+
+# Next.js
+.next/
+out/
 sdist/
 var/
 wheels/
